--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,84 @@
 body{
     margin: 0;
     padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
+}
+h1 {
+    width: 70vw;
+    color: #333333;
+}
+.number {
+    font-size: 1.2em;
+    color: #555555;
+    margin: 5px 0;
+    display: flex;
+    flex-direction: column;
+    margin: auto auto;
+}
+.dzikir-container {
+    width: 80vw;
+    padding: 8px 12px;
+    max-width: 340px;
+    margin: 10px auto;
+    background-color: #ffffff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 10px;
+    border: 3px solid #ddd;
+    border-radius: 8px;
+}
+.incrementBtn {
+    max-width: 300px;
+    width: 60vw;
+    font-size: larger;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    margin: auto auto;
+    padding: 5vw 0.5vw;
+}
+.childBtn {
+    flex: 1 1 40%;
+    margin: 5px;
+    padding: 0.2em;
+    font-size: 1.2em;
+}
+details {
+    max-width: 80vw;
+    margin: 12px 0;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 8px 12px;
+    background: #fafafa;
+    display: block;
+    text-align: center;
+    margin: auto auto;
+} 
+summary { 
+    cursor: pointer;
+    font-weight: 600;
+    list-style: none;
+/* hilangkan marker default */ 
+}
+/* ganti marker default dengan ikon custom */
+summary::marker {
+     content: ""; 
+}
+summary::after { 
+    content: "▾";
+    float: right;
+    transition: transform 0.2s ease;
+} 
+details[open] summary::after { 
+    transform: rotate(180deg);
+} 
+.content {  
+    color: #333;
+    line-height: 1.6;
+}
+#bottom{
+    margin-bottom: 50px;
 }
