--- a/styles.css
+++ b/styles.css
@@ -12,33 +12,35 @@ h1 {
     font-size: 1.2em;
     color: #555555;
     margin: 5px 0;
-    display: flex;
-    flex-direction: column;
-    margin: auto auto;
+    text-align: center;
+    margin: 0 auto;
+    font-weight: bolder;
+    font-size: xx-large;
 }
 .dzikir-container {
     width: 80vw;
-    padding: 8px 12px;
+    padding: 1px 12px;
     max-width: 340px;
     margin: 10px auto;
     background-color: #ffffff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
     display: flex;
-    flex-wrap: wrap;
-    padding: 10px;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 10px 0 10px;
     border: 3px solid #ddd;
     border-radius: 8px;
 }
 .incrementBtn {
+    margin-top: 50px;
+    padding: 10px 20px;
     max-width: 300px;
-    width: 60vw;
+    width: 21em;
     font-size: larger;
     text-align: center;
-    display: flex;
-    justify-content: center;
-    margin: auto auto;
-    padding: 5vw 0.5vw;
+    padding: 2em;
+    border-radius: 8px;
 }
 .childBtn {
     flex: 1 1 40%;
@@ -47,7 +49,8 @@ h1 {
     font-size: 1.2em;
 }
 details {
-    max-width: 80vw;
+    width: 80vw ;
+    max-width: 340px;
     margin: 12px 0;
     border: 1px solid #ddd;
     border-radius: 8px;
