--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    height:100vh;
+    height:auto;
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
@@ -81,7 +81,7 @@ input {
     opacity: 1;
 }
 
-.incrementBtn { 
+#incrementBtnEl { 
     font-size: 5rem; 
     border-radius: 8px; 
     width: 100%; 
