--- a/styles.css
+++ b/styles.css
@@ -83,9 +83,15 @@ input {
 
 #incrementBtnEl { 
     font-size: 5rem; 
-    border-radius: 8px; 
+    padding: 50px 50px 50px 50px;
     width: 100%; 
     max-width: 280px; 
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    position: fixed;
+    top: 50px;
     
 }
 
