--- a/styles.css
+++ b/styles.css
@@ -108,16 +108,16 @@ input {
     opacity: 1;
 }
 
-#incrementBtnEl { 
+.incrementBtnEl { 
     font-size: 5rem; 
     width: 100%; 
     height: 170px;
-    max-width: 280px; 
+    max-width: 430px; 
     background-color: transparent;
     position: relative;
     top: 20px;
-    border: 3px solid var(--btn-border);
     margin: auto;
+    border: none;
 }
 
 .incrementBtn:active {
